--- a/bmh_lims/frontend/package.json
+++ b/bmh_lims/frontend/package.json
@@ -14,7 +14,9 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.1.0",
+    "file-loader": "^6.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "webpack": "^4.44.1",
