--- a/bmh_lims/frontend/package.json
+++ b/bmh_lims/frontend/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/plugin-transform-regenerator": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@svgr/webpack": "^5.4.0",
@@ -25,6 +26,8 @@
   "dependencies": {
     "axios": "^0.20.0",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "tsv-reader": "^1.0.6",
+    "xlsx": "^0.16.7"
   }
 }
