--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,7 +17,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:12.4
+        image: postgres:10.12
         env:
           POSTGRES_USER: ${{ secrets.BMH_LIMS_DB_USER }}
           POSTGRES_PASSWORD: ${{ secrets.BMH_LIMS_DB_PASSWORD }}
@@ -42,6 +42,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install NodeJS dependencies
+        working-directory: ./bmh_lims/frontend
         run: npm install
       - name: Run Migrations
         env:
