--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -20,7 +20,7 @@ jobs:
         image: postgres
         env:
           POSTGRES_USER: ${{ secrets.BMH_LIMS_DB_USER }}
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: ${{ secrets.BMH_LIMS_DB_PASSWORD }}
           POSTGRES_DB: bmh_lims
         ports:
           - 5432:5432
