--- a/bmh_lims/frontend/package.json
+++ b/bmh_lims/frontend/package.json
@@ -17,7 +17,10 @@
     "@babel/preset-react": "^7.10.4",
     "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "file-loader": "^6.1.0",
+    "jasmine": "^3.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "webpack": "^4.44.1",
