--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 addopts = --ds=config.settings.test --reuse-db
 python_files = tests.py test_*.py
+norecursedirs = build dist CVS _darcs {arch} *.egg .svn _build tmp* .ipynb_checkpoints media static staticfiles node_modules
