--- a/bmh_lims/frontend/package.json
+++ b/bmh_lims/frontend/package.json
@@ -41,6 +41,7 @@
 	},
 	"dependencies": {
 		"axios": "^0.20.0",
+		"dotenv": "^8.2.0",
 		"react-router-dom": "^5.2.0",
 		"styled-components": "^5.2.0",
 		"tsv-reader": "^1.0.6",
