--- a/bmh_lims/frontend/package.json
+++ b/bmh_lims/frontend/package.json
@@ -42,6 +42,7 @@
 	"dependencies": {
 		"axios": "^0.20.0",
 		"papaparse": "^5.3.0",
+		"react-icons": "^3.11.0",
 		"react-router-dom": "^5.2.0",
 		"styled-components": "^5.2.0",
 		"tsv-reader": "^1.0.6",
