--- a/bmh_lims/frontend/package.json
+++ b/bmh_lims/frontend/package.json
@@ -29,6 +29,7 @@
 		"babel-jest": "^26.5.0",
 		"babel-loader": "^8.1.0",
 		"babel-polyfill": "^6.26.0",
+		"css-loader": "^5.0.1",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.5",
 		"file-loader": "^6.1.0",
@@ -36,12 +37,14 @@
 		"jest-each": "^26.5.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"style-loader": "^2.0.0",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12"
 	},
 	"dependencies": {
 		"axios": "^0.20.0",
 		"papaparse": "^5.3.0",
+		"react-datepicker": "^3.3.0",
 		"react-icons": "^3.11.0",
 		"react-router-dom": "^5.2.0",
 		"styled-components": "^5.2.0",
