--- a/bmh_lims/frontend/package.json
+++ b/bmh_lims/frontend/package.json
@@ -42,7 +42,10 @@
 		"webpack-cli": "^3.3.12"
 	},
 	"dependencies": {
+		"@date-io/luxon": "^1.3.13",
+		"@material-ui/pickers": "^3.2.10",
 		"axios": "^0.20.0",
+		"luxon": "^1.25.0",
 		"papaparse": "^5.3.0",
 		"react-datepicker": "^3.3.0",
 		"react-icons": "^3.11.0",
