--- a/bmh_lims/frontend/package.json
+++ b/bmh_lims/frontend/package.json
@@ -43,11 +43,11 @@
 	},
 	"dependencies": {
 		"@date-io/luxon": "^1.3.13",
+		"@material-ui/core": "^4.11.0",
 		"@material-ui/pickers": "^3.2.10",
 		"axios": "^0.20.0",
 		"luxon": "^1.25.0",
 		"papaparse": "^5.3.0",
-		"react-datepicker": "^3.3.0",
 		"react-icons": "^3.11.0",
 		"react-router-dom": "^5.2.0",
 		"styled-components": "^5.2.0",
