--- a/bmh_lims/frontend/package.json
+++ b/bmh_lims/frontend/package.json
@@ -43,6 +43,9 @@
 	},
 	"dependencies": {
 		"@date-io/luxon": "^1.3.13",
+		"@fortawesome/fontawesome-svg-core": "^1.2.34",
+		"@fortawesome/free-solid-svg-icons": "^5.15.2",
+		"@fortawesome/react-fontawesome": "^0.1.14",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/pickers": "^3.2.10",
 		"axios": "^0.20.0",
